--- a/french/comment-fr.html
+++ b/french/comment-fr.html
@@ -48,15 +48,15 @@
                     <form name="form" action="" method="post">
                         <div class="form-up__contents">
                             <div class="form_nickname">
-                                <label for="nickname">ニックネーム：</label>
-                                <input type="text" required id="nickname" name="user_nickname" placeholder="ロンドン　太郎">
+                                <label for="nickname">Surnom：</label>
+                                <input type="text" required id="nickname" name="user_nickname" placeholder="Jean Londres">
                             </div>
                             <div class="form_comment">
-                                <label for="comment">コメント：</label>
-                                <textarea id="comment" required name="user_comment" placeholder="ご自由に書き込んでください"></textarea>
+                                <label for="comment">Commentaire：</label>
+                                <textarea id="comment" required name="user_comment" placeholder="Veuillez écrire librement"></textarea>
                             </div>
                             <div class="form_button">
-                                <input type="button" id="btn" value="コメントを送る" onclick="sendComment()">
+                                <input type="button" id="btn" value="Envoyer un commentaire" onclick="sendComment()">
                                 <script type="text/javascript">
                                     function sendComment() {
                                         var nickname = document.getElementById('nickname').value;
@@ -66,16 +66,16 @@
                                         console.log(comment);
                                         -------------------------*/
                                         if (nickname == "" || comment == "") {
-                                            var message = String("NickNameとCommentは必須項目です。");
+                                            var message = String("Pseudo et commentaire sont obligatoires.");
                                         } else {
                                             var date = new Date();
-                                            var message = String("name : " + nickname + "\n---comment---\n" + comment + "\n----------------\n" + "\n以上の内容で送信しました。");
+                                            var message = String("name : " + nickname + "\n---comment---\n" + comment + "\n----------------\n" + "\nEnvoyé avec le contenu ci-dessus.");
                                             var sendMessage = String("<br>name : " + nickname + "<br>comment :" + comment + "<br>");
                                         }
                                         alert(message);
                                         Update(date, sendMessage);
                                     }
-            
+
                                     function Update(date, message) {
                                         var stm = document.getElementById('update');
                                         stm.innerHTML = String("<br>" + date + message + "<hr>"+stm.innerHTML);
@@ -87,10 +87,10 @@
                 </div>
                 <div class="form-under">
                     <div>
-                        <h2>コメント欄</h2>
+                        <h2>Champ de commentaire</h2>
                     </div>
                     <div class="form-under__contents">
-                        <div id="update">なにか書き込んでください！<br></div>
+                        <div id="update">Veuillez écrire quelque chose!<br></div>
                     </div>
                 </div>
             </div>
