--- a/japanese/comment-ja.html
+++ b/japanese/comment-ja.html
@@ -71,7 +71,7 @@
                                         alert(message);
                                         Update(date, sendMessage);
                                     }
-            
+
                                     function Update(date, message) {
                                         var stm = document.getElementById('update');
                                         stm.innerHTML = String("<br>" + date + message + "<hr>"+stm.innerHTML);
@@ -86,7 +86,7 @@
                         <h2>コメント欄</h2>
                     </div>
                     <div class="form-under__contents">
-                        <div id="update">なにか書き込んでください！<br></div>
+                        <div id="update">ご自由に書き込んでください<br></div>
                     </div>
                 </div>
             </div>
