--- a/french/inquiry-fr.html
+++ b/french/inquiry-fr.html
@@ -61,7 +61,7 @@
               <form name="fome1" action="" method="post">
                 <div class="form_name">
                   <label for="name">Name：</label>
-                  <input type="text" required id="name" name="user_name" placeholder="Jean London">
+                  <input type="text" required id="name" name="user_name" placeholder="Jean Londres">
                 </div>
                 <div class="form_mail">
                   <label for="email">Email：</label>
